added SI and percentage formatters

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 	document.write("</TR>");
 
 	example( "String1 %s String2 %s ",["Aap","noot"]);
+	example( "SI units: %.2i "       ,[1000.0]);
+	example( "SI units: %.0i "       ,[1000.0]);
+	example( "SI units: %.0i "       ,[1000.0]);
+	example( "SI units: &#x20ac; %.0i "       ,[1000.0]);
+	example( "Percentage: %.1p "       ,[1.2345]);
 	example( "Testing 1..2..3.. %(,d Aap!",[-50000]);
 	example( "Percent sign: %%",[20]);
 	example( "Duke's Birthday: %tc",[new Date("2014-12-16")]);
