--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	example( "Argument ordering: %2$s String2 %1$s ",["Aap","noot"]);
 	example( "String1 %s String2 %s ",["Aap","noot"]);
+	example( "SI units: %.2i "       ,[0.0]);
 	example( "SI units: %.2i "       ,[1000.0]);
 	example( "SI units: %.0i "       ,[1000.0]);
 	example( "SI units: %.0i "       ,[1000.0]);
